--- a/src/app/components/country-details/country-details.component.scss
+++ b/src/app/components/country-details/country-details.component.scss
@@ -1,5 +1,9 @@
 @use "utils" as u;
 
+@host {
+  max-width: u.$breakpoint-desktop;
+}
+
 button.back {
   padding: 1rem 2.4rem;
   margin-bottom: 4rem;
@@ -18,6 +22,7 @@ button.back {
     background-repeat: no-repeat;
     background-position: center;
     margin-bottom: 4rem;
+    border-radius: 0.2rem;
   }
 
   .description {
@@ -65,7 +70,7 @@ button.back {
 
 @include u.breakpoint(desktop) {
   .country {
-    max-width: unset;
+    max-width: u.$breakpoint-desktop;
     display: grid;
     grid-template-columns: 63rem 1fr;
     grid-template-rows: 1fr min-content;
@@ -106,6 +111,17 @@ button.back {
           content: ":";
         }
       }
+    }
+  }
+}
+
+@include u.breakpoint(ultra) {
+  .country {
+    max-width: u.$breakpoint-ultra;
+    grid-template-columns: 80rem;
+
+    .img {
+      min-height: 48rem;
     }
   }
 }
