--- a/src/scss/_utils.scss
+++ b/src/scss/_utils.scss
@@ -1,5 +1,6 @@
 $breakpoint-mobile: 375px;
 $breakpoint-desktop: 1440px;
+$breakpoint-ultra: 1920px;
 $shadow: 0 2px 4px hsla(0, 0%, 0%, 0.1);
 
 @mixin breakpoint($breakpoint) {
@@ -14,6 +15,12 @@ $shadow: 0 2px 4px hsla(0, 0%, 0%, 0.1);
       @content;
     }
   }
+
+  @if $breakpoint==ultra {
+    @media only screen and (min-width: $breakpoint-ultra) {
+      @content;
+    }
+  }
 }
 
 @mixin fontDefault {
@@ -23,7 +30,7 @@ $shadow: 0 2px 4px hsla(0, 0%, 0%, 0.1);
 }
 
 @mixin formElements {
-  height: 4.8rem;
+  height: 5rem;
   border-radius: 0.4rem;
   border: none;
   outline: none;
